[gd_scene load_steps=3 format=3 uid="uid://egb0qrfm4whr"]

[ext_resource type="Script" uid="uid://pwyb4tkhknpr" path="res://scenes/ui/skill_tree/skill_tree_node.gd" id="1_rsfar"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_rsfar"]
color = Color(0.66, 0.52844, 0.3564, 1)
thickness = 2

[node name="SkillTreeNode" type="Button"]
anchors_preset = -1
anchor_left = 0.117
anchor_right = 0.117
offset_left = -262.784
offset_right = -6.78401
offset_bottom = 60.0
pivot_offset = Vector2(128, 0)
size_flags_horizontal = 4
text = "epic cool upgrade"
script = ExtResource("1_rsfar")

[node name="InfoPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
show_behind_parent = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.0
offset_right = 5.0
offset_bottom = 10.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LevelReq" type="Label" parent="InfoPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Lv:n"

[node name="Cost" type="Label" parent="InfoPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cost:n"

[node name="HSeparator" type="HSeparator" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_rsfar")

[node name="Description" type="Label" parent="InfoPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "daasñldkfjsadñflksdjfñsladkjfñsldkfjañsdlfkjasñdlfkjasñdlfkjasdñflkasjdñflaskdjfñasldkfjñsaldkfjsañdlfkjsañdlfkjsañdlfkjsañdlfkjasñdlfkjsañdflkasj fsñdlakf sjñadlkf jñsadlkf jñsadl fksda ñjsdalk fajñsldkf ñasjdlk fañjsl"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
